# model_testing_arima

./: .gitignore  README.md
docker/: Makefile  docker-compose.base.yml  docker-compose.yml
tester/: .env.exaple  pyproject.toml
tester/app/: main.py
tester/app/core/: config.py  decorators.py  logger.py
tester/app/databases/: postgresql.py
tester/app/models/: forecast_result.py
tester/app/queries/: forecast_data_query.sql  forecast_overall_query.sql  forecast_top_offenders_detail_query.sql  forecast_top_offenders_query.sql
tester/app/routers/: routers.py
tester/app/schemas/: forecast_test_result.py  request_schema.py
tester/app/services/: forecast_initial_test_service.py  forecast_test_service.py  forecast_test_service_multi_run.py
tester/app/services/helpers/: db_fetcher.py  request_sender.py
tester/app/services/repositories/: forecast_result_repository.py
tester/app/utils/: backup_creator.py  save_to_excel.py
