[tool.poetry]
name = "tester"
version = "0.1.0"
description = ""
authors = ["VladimirK"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
requests = "^2.32.3"
psycopg2 = "^2.9.10"
loguru = "^0.7.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.40"
httpx = "^0.28.1"
python-dotenv = "^1.1.0"
pydantic = "^2.11.3"


[tool.poetry.group.dev.dependencies]
deptry = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
